--- a/static/css/question.css
+++ b/static/css/question.css
@@ -60,8 +60,14 @@
   color: black;
 }
 
-.poster-container {
+.poster-container, .best-answer-badge {
   margin-bottom: 15px;
+}
+
+.best-answer-badge span {
+    padding: 6px;
+    padding-left: 12px;
+    padding-right: 12px;
 }
 
 .poster-profile-pic-container,
@@ -144,7 +150,11 @@ main {
   margin: 1%;
 }
 
-#options-dropdown {
+.response-control {
+    float: right;
+}
+
+#options-dropdown { /* TODO: remover apos implementar novo template de MRs */
   float: right;
 }
 
