--- a/main_app/templates/base/recent-questions-pjax.html
+++ b/main_app/templates/base/recent-questions-pjax.html
@@ -18,14 +18,19 @@
 				{% if ANSWERED %}
 				<span style="display: block"><b>Sua resposta:</b></span> {% answer user.username question.id %}
 				{% else %}
-				<form id="form-{{ question.id }}" class="response-form" method="post" action="/" onsubmit="make_answer({{ question.id }}); return false;">
-					{% csrf_token %}
-					<input name="question_id" type="hidden" value="{{ question.id }}">
-					<textarea name="text" maxlength="5000" class="form-control" placeholder="Escreva sua resposta aqui" onclick="return show_form_buttons(this.parentElement)"></textarea>
-					<input class="btn btn-outline-primary form-button" type="submit" value="Enviar">
-					<input class="btn btn-outline-primary form-button" type="submit" value="Cancelar" onclick="return hide_form_buttons(this.parentElement)">
-				</form>
-				<img style="display: none" id="modal-{{ question.id }}" src="/static/images/loading.gif" width="5%;">
+					{% ablockb question.creator.user.username user.username as BLOCKED %}
+					{% if BLOCKED %}
+						<span><br>Pergunta indisponível.</span>
+					{% else %}
+						<form id="form-{{ question.id }}" class="response-form" method="post" action="/" onsubmit="make_answer({{ question.id }}); return false;">
+							{% csrf_token %}
+							<input name="question_id" type="hidden" value="{{ question.id }}">
+							<textarea name="text" maxlength="5000" class="form-control" placeholder="Escreva sua resposta aqui" onclick="return show_form_buttons(this.parentElement)"></textarea>
+							<input class="btn btn-outline-primary form-button" type="submit" value="Enviar">
+							<input class="btn btn-outline-primary form-button" type="submit" value="Cancelar" onclick="return hide_form_buttons(this.parentElement)">
+						</form>
+						<img style="display: none" id="modal-{{ question.id }}" src="/static/images/loading.gif" width="5%;">
+					{% endif %}
 				{% endif %}
 		{% else %}
 		<p><a href="/signin?redirect=/question/{{ question.id }}">Faça login</a> ou <a href="/signup?redirect=/question/{{ question.id }}">crie uma conta</a> para responder está pergunta.</p>
