Pequenas edições no layout

--- a/main_app/templates/question.html
+++ b/main_app/templates/question.html
@@ -244,7 +244,7 @@ $(function() {
 <script src="/static/js/question.js?version=7"></script>
 <script>
 
-var formbgcolor='bg-white'; var bgcolor='bg-light'; var textcolor='text-dark';
+var formbgcolor='bg-white'; var bgcolor='bg-white'; var textcolor='text-dark';
 var commentformbgcolor='bg-white'; var commentbgcolor='bg-light';
 </script>
 <script src="/static/js/general_functions.js?version=2"></script>
