--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -8,7 +8,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
-<link rel="stylesheet" href="/static/css/index.css?v=x">
+<link rel="stylesheet" href="/static/css/index.css?v=9">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://kit.fontawesome.com/1f965a8b94.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
@@ -60,7 +60,9 @@
 			<li class="nav-item">
 				<span class="nav-link" id="news">Novas perguntas</span>
 			</li>
-			<a data-pjax href="/pjax-questions"><img src="/static/images/reload.png" id="reload"></a>
+			<li style="flex-grow: 1;">
+				<a data-pjax style="float: right;" href="/pjax-questions"><img src="/static/images/reload.png" id="reload"></a>
+			</li>
 		</ul>
 <!-- Questões recentes -->
 <section class="card" id="n_questions">
