Preparação p/ dark mode - index.html

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -24,6 +24,33 @@
 #tabs li {
 	cursor: pointer;
 }
+#tabs.dark {
+    border-bottom: none;
+}
+#tabs .nav-item .nav-link.bg-dark {
+    background-color: rgba(0,0,0,0) !important;
+}
+#tabs .nav-item .bg-dark.active {
+    background-color: #343a40 !important;
+    border-color: rgba(0,0,0,.125) !important;
+    color: #f8f9fa !important;
+}
+.nav-tabs .nav-link:hover {
+    border-color: rgba(255,255,255,.125) !important;
+}
+
+.bg-darkerish {
+    background-color: #394046 !important;
+}
+
+.bg-darkish {
+    background-color: #454d54 !important;
+}
+
+.form-control {
+  border: 1px solid rgba(0,0,0,.125);
+}
+
 
 .response-form input {
 	display: none;
