--- a/main_app/templates/ask.html
+++ b/main_app/templates/ask.html
@@ -9,6 +9,12 @@
 <meta name="description" content="Faça uma pergunta no Asker.fun">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
 <style>
+.form-control {
+    border: 1px solid rgba(0,0,0,.125);
+}
+.form-group * {
+	margin-top: 5px;
+}
 main {
 	width: 50%;
 	margin: 5px auto;
