--- a/main_app/templates/edit-profile.html
+++ b/main_app/templates/edit-profile.html
@@ -6,9 +6,20 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<style>
+	main {
+		width: 50%;
+		margin: auto;
+	}
+	.form-control {
+		margin-right: 5px;
+		border: 1px solid rgba(0,0,0,.125);
+	}
+</style>
 </head>
 
-	<body>
+	<body><main>
+
 
 		<hr>
 		<h2>Foto de perfil</h2>
@@ -24,7 +35,7 @@
 		<form method="post">
 			<input type="hidden" name="type" value="bio">
 			{% csrf_token %}
-			<textarea name="bio" maxlength="3000" width="70%">{{ user_p.bio }}</textarea>
+			<textarea class="form-control" name="bio" maxlength="3000" width="70%">{{ user_p.bio }}</textarea>
 			<input class="btn btn-primary" type="submit" value="Alterar biografia">
 		</form>
 		<hr>
@@ -77,5 +88,6 @@
 		<p>Seu email: {{ user.email }}</p>
 		<p><a href="/reset-password">Clique aqui</a> para alterar sua senha.</p>
 		{% endif %}
-	</body>
+
+	</main></body>
 </html>
