--- a/main_app/templates/reset-password-1-part.html
+++ b/main_app/templates/reset-password-1-part.html
@@ -7,12 +7,18 @@
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
 		
 		<title>Alterar senha</title>
+		<style>
+			.form-control {
+				margin-right: 5px;
+				border: 1px solid rgba(0,0,0,.125);
+			}
+		</style>
 	</head>
 	<body>
 		<form class="form-inline" method="get" action="/reset-password">
 			<input type="hidden" name="type" value="email-verification">
 			<input class="form-control" type="text" name="email" placeholder="Email">
-			<input class="btn btn-outline-primary" type="submit" value="Ok">
+			<input class="btn btn-primary" type="submit" value="Ok">
 		</form>
 		<p>Para alterar sua senha, digite seu email no campo acima, te enviaremos um email de confirmação e então o formulário para a troca de senha.</p>
 	</body>
