Preparação p/ dark mode - notificacoes, signin/signup, rank

--- a/main_app/templates/edit-profile.html
+++ b/main_app/templates/edit-profile.html
@@ -15,6 +15,11 @@
 		margin-right: 5px;
 		border: 1px solid rgba(0,0,0,.125);
 	}
+	@media (min-width: 320px) and (max-width: 480px) {
+		main {
+			width: 98%;
+		}
+	}
 </style>
 </head>
 
