--- a/main_app/templates/rank.html
+++ b/main_app/templates/rank.html
@@ -65,7 +65,7 @@
 			<table class="table table-bordered">
 				<head>
 					<tr>
-						<th>Posição</th><th>Pontos</th><th>Aliás</th>
+						<th>Posição</th><th>Pontos</th><th>Alias</th>
 					</tr>
 				</head>
 
