--- a/main_app/templates/notification.html
+++ b/main_app/templates/notification.html
@@ -11,6 +11,9 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
         <title>Suas Notificações</title>
         <style>
+        	.nav {
+        		margin-bottom: 10px;
+        	}
             .notifications {
                 width: 60%;
                 margin: 0 auto;
