--- a/main_app/templates/signin.html
+++ b/main_app/templates/signin.html
@@ -8,7 +8,7 @@
 		<title>Fazer login</title>
 		
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
-		<link rel="stylesheet" href="/static/css/signin.css">
+		<link rel="stylesheet" href="/static/css/signin.css?version=1">
 	</head>
 	<body>
 		
@@ -35,8 +35,23 @@
 			  <button type="submit" class="btn btn-primary">Entrar</button>
 			</form>
 			
-			<p><a href="/reset-password"><br>Esqueci minha senha</a>.</p>
+			<p><a href="/reset-password"><br>Esqueci minha senha</a></p>
 		</div>
-		
+
+	<script>
+		/* Works for: signin.html, signup.html */
+
+function toggleDarkMode() {
+	document.body.style = "background: #222; color: white;";
+
+	texts = document.getElementsByClassName('form-control')
+	for (i = 0; i < texts.length; i++) {
+	    texts[i].classList.add("bg-dark");
+	    texts[i].classList.add("text-light");
+	}
+}
+
+toggleDarkMode()
+	</script>
 	</body>
 </html>
