--- a/main_app/templates/signup.html
+++ b/main_app/templates/signup.html
@@ -8,8 +8,7 @@
 		<title>Criar uma conta</title>
 		
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
-		
-		<link rel="stylesheet" href="/static/css/signup.css">
+		<link rel="stylesheet" href="/static/css/signup.css?version=1">
 	</head>
 	<body>
 		<div class="signup-form">
@@ -42,4 +41,19 @@
 			</form>
 		</form>
 	</body>
+	<script>
+		/* Works for: signin.html, signup.html */
+
+function toggleDarkMode() {
+	document.body.style = "background: #222; color: white;";
+
+	texts = document.getElementsByClassName('form-control')
+	for (i = 0; i < texts.length; i++) {
+	    texts[i].classList.add("bg-dark");
+	    texts[i].classList.add("text-light");
+	}
+}
+
+toggleDarkMode()
+	</script>
 </html>
