--- a/main_app/templates/reset-password-1-part.html
+++ b/main_app/templates/reset-password-1-part.html
@@ -21,5 +21,21 @@
 			<input class="btn btn-primary" type="submit" value="Ok">
 		</form>
 		<p>Para alterar sua senha, digite seu email no campo acima, te enviaremos um email de confirmação e então o formulário para a troca de senha.</p>
+	<script src="/static/js/cookieman.js?v=0.1"></script>
+	<script>
+function toggleDarkMode() {
+	document.body.style = "background: #222; color: white;";
+
+	texts = document.getElementsByClassName('form-control')
+	for (i = 0; i < texts.length; i++) {
+	    texts[i].classList.add("bg-dark");
+	    texts[i].classList.add("text-light");
+	}
+}
+if (getDarkCookie() == 'true') {
+	toggleDarkMode();
+}
+
+	</script>
 	</body>
 </html>
