--- a/main_app/templates/edit-profile.html
+++ b/main_app/templates/edit-profile.html
@@ -95,4 +95,20 @@
 		{% endif %}
 
 	</main></body>
+    <script src="/static/js/cookieman.js?v=0.1"></script>
+	<script>
+function toggleDarkMode() {
+	document.body.style = "background: #222; color: white;";
+
+	texts = document.getElementsByClassName('form-control')
+	for (i = 0; i < texts.length; i++) {
+	    texts[i].classList.add("bg-dark");
+	    texts[i].classList.add("text-light");
+	}
+}
+if (getDarkCookie() == 'true') {
+	toggleDarkMode();
+}
+
+	</script>
 </html>
