--- a/static/css/index.css
+++ b/static/css/index.css
@@ -35,7 +35,7 @@
     border-color: rgba(0,0,0,.125) !important;
     color: #f8f9fa !important;
 }
-.nav-tabs .nav-link:hover {
+.nav-tabs .nav-link.bg-dark:hover {
     border-color: rgba(255,255,255,.125) !important;
 }
 
