--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -80,7 +80,7 @@
 				<p>
 					{% if question.description != '' %}{{ question.description|cut_description|safe|linebreaksbr }}{% endif %}
 				</p>
-				<small>{% total_answers question.id %} respostas <b>&middot; </b> <span class="text-muted"><img src="/static/images/white-heart.png" width="15px"> {{ question.total_likes }}</span></small>
+				<small>{% total_answers question.id %} respostas <b>&middot; </b> <span class="text-muted"><img src="/static/images/white-heart.png?version=2" width="15px"> {{ question.total_likes }}</span></small>
 				{% if user.is_authenticated %}
 					{% answered user.username question.id as ANSWERED %}
 					{% if ANSWERED %}
