--- a/main_app/templates/question.html
+++ b/main_app/templates/question.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
-		<link rel="stylesheet" href="/static/css/question.css?version=4.1">
+		<link rel="stylesheet" href="/static/css/question.css?version=5">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.3.0/jquery.form.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
@@ -30,7 +30,7 @@ $(function() {
 			new_innerHTML += '<hr><img src="'+url+'" class="response-image" alt="Ocorreu um erro ao processar a imagem."><hr>'
 		}
 
-		new_innerHTML += '<div class="heart-comment" id="like-counter-'+answer_id+'" onclick="like(this, '+answer_id+')"><img width="20px" src="/static/images/white-heart.png" class="icon"> <span>0</span></div>&nbsp;&nbsp;                   <div class="dropdown btn-group dropup" id="options-dropdown"><button class="btn btn-primary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Opções</button>   <div class="dropdown-menu '+bgcolor+'" aria-labelledby="dropdownMenuButton"><button class="dropdown-item '+bgcolor+' '+textcolor+'" onclick="delete_response(this, '+answer_id+');">Apagar</button><button class="dropdown-item '+bgcolor+' '+textcolor+'" onclick="document.getElementById(`edit-response-form`).style.display=`block`">Editar</button></div>   </div>                  <div class="heart-comment">&nbsp;<img width="20px" src="/static/images/comments.png" class="icon" onclick="show_comments(this.parentElement, '+answer_id+', this.parentElement.getElementsByTagName(`img`)[0], `{{ csrf_token }}`, `{{ user.username }}`, {{ question.id }})"> <span class="comment">0</span><div class="comments" id="1"></div></div>'
+		new_innerHTML += '<div class="heart-comment" id="like-counter-'+answer_id+'" onclick="like(this, '+answer_id+')"><img width="20px" src="/static/images/white-heart.png?version=2" class="icon"> <span>0</span></div>&nbsp;&nbsp;                   <div class="dropdown btn-group dropup" id="options-dropdown"><button class="btn btn-primary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Opções</button>   <div class="dropdown-menu '+bgcolor+'" aria-labelledby="dropdownMenuButton"><button class="dropdown-item '+bgcolor+' '+textcolor+'" onclick="delete_response(this, '+answer_id+');">Apagar</button><button class="dropdown-item '+bgcolor+' '+textcolor+'" onclick="document.getElementById(`edit-response-form`).style.display=`block`">Editar</button></div>   </div>                  <div class="heart-comment">&nbsp;<img width="20px" src="/static/images/comments.png?version=2" class="icon" onclick="show_comments(this.parentElement, '+answer_id+', this.parentElement.getElementsByTagName(`img`)[0], `{{ csrf_token }}`, `{{ user.username }}`, {{ question.id }})"> <span class="comment">0</span><div class="comments" id="1"></div></div>'
 		new_innerHTML += '<form id="edit-response-form" class="form-inline" method="post" action="/edit-response" onsubmit="document.getElementById(`response-'+answer_id+'`).innerHTML = this.response.value.replace(`\n`, `<br>`)">{% csrf_token %}<input type="hidden" name="response_id" value="'+answer_id+'"><textarea name="response" class="form-control '+commentbgcolor+' '+textcolor+'">'+new_user_response+'</textarea><input class="btn btn-outline-primary" type="submit" value="Enviar"></form></li>'
 		responses.innerHTML += new_innerHTML
 
@@ -155,7 +155,7 @@ $(function() {
 						{% endif %}
 
 						<div class="heart-comment" id="like-counter-{{ response.id }}" onclick="like(this, {{ response.id }})">
-							<img width="20px" src="/static/images/{{ response.id|like_or_not:user.username }}" class="icon">
+							<img width="20px" src="/static/images/{{ response.id|like_or_not:user.username }}?version=2" class="icon">
 							<span>{{ response.total_likes }}</span>
 						</div>
 						&nbsp;&nbsp;
@@ -180,7 +180,7 @@ $(function() {
 
 
 						<div class="heart-comment">
-							<img width="20px" src="/static/images/comments.png" class="icon" onclick="show_comments(this.parentElement, {{ response.id }}, this.parentElement.getElementsByTagName('img')[0], '{{ csrf_token }}', `{{ user.username }}`, {{ question.id }})">
+							<img width="20px" src="/static/images/comments.png?version=2" class="icon" onclick="show_comments(this.parentElement, {{ response.id }}, this.parentElement.getElementsByTagName('img')[0], '{{ csrf_token }}', `{{ user.username }}`, {{ question.id }})">
 							<span class="comment">{{ response.id|total_comments }}</span>
 
 							<!-- Comentários -->
@@ -213,7 +213,7 @@ $(function() {
 								{% csrf_token %}
 								<textarea maxlength="5000" class="form-control" placeholder="Escreva uma resposta..." name="response" required="required"></textarea>
 								<input class="btn btn-outline-primary" type="submit" value="Enviar" id="send-response-btn">
-								<label for="upload-photo"><img src="/static/images/camera.png" width="25px"> <span id="upload-photo-text"></span></label>
+								<label for="upload-photo"><img src="/static/images/camera.png?version=2" width="25px"> <span id="upload-photo-text"></span></label>
 								<input type="file" accept="image/*" name="file" id="upload-photo" onclick="return veracity_test({{ user_p.total_points }}, {% MINIMUM_POINTS_FOR_POSTING_IMAGES %});">
 								<img src="/static/images/close-icon.png" width="20px" style="display: none; cursor: pointer;" id="delete-photo-icon"><span>
 							</form>
