Atualização de statics

--- a/main_app/templates/profile.html
+++ b/main_app/templates/profile.html
@@ -11,7 +11,7 @@
 		<script src="/static/js/cookieman.js?v=0.1"></script>
 		<script>
 			var cssfn = 'profile.css';
-			var cssversion = '?v=2.2';
+			var cssversion = '?v=3';
 			if (getDarkCookie() == 'true') { cssfn = 'profile-d.css';}
 			var link = document.createElement('link');
 			link.rel = 'stylesheet';
@@ -253,7 +253,7 @@
 		</section>
 
 		{% endif %}
-		<script src="/static/js/profile.js?version=2.1"></script>
+		<script src="/static/js/profile.js?v=3"></script>
 		<script>
 if (getDarkCookie() == 'true') {
 	document.getElementsByClassName('navbar')[0].classList.remove("navbar-light");
