--- a/main_app/templates/question.html
+++ b/main_app/templates/question.html
@@ -9,7 +9,7 @@
 		<script src="/static/js/cookieman.js?v=0.1"></script>
 		<script>
 			var cssfn = 'question.css';
-			var cssversion = '?v=9.46';
+			var cssversion = '?v=10';
 			if (getDarkCookie() == 'true') { cssfn = 'question-d.css';}
 			var link = document.createElement('link');
 			link.rel = 'stylesheet';
@@ -251,7 +251,7 @@ $(function() {
 			</div>
 			{% endfor %}
 		</div>
-<script src="/static/js/question.js?version=7.4"></script>
+<script src="/static/js/question.js?v=8"></script>
 <script>
 var formbgcolor='bg-white'; var bgcolor='bg-white'; var textcolor='text-dark';
 var commentformbgcolor='bg-white'; var commentbgcolor='bg-light';
