Preparação p/ tabs extras em profile.html

--- a/main_app/templates/profile.html
+++ b/main_app/templates/profile.html
@@ -65,6 +65,9 @@
 			#edit-profile, #questions-section, #responses-section, #uinfo {
 				width: 50%;
 				margin: auto;
+			}
+
+			#edit-profile {
 				margin-top: 10px;
 				margin-bottom: 10px;
 			}
