Melhoria no design da profile.html

--- a/main_app/templates/profile.html
+++ b/main_app/templates/profile.html
@@ -260,7 +260,7 @@
 				</ul>
 				<button class="btn btn-outline-primary" onclick="show_more_responses(this, {{ user_p.user.id }})">mais</button>
 			</div>
-		</section>
+		</section><br>
 
 		{% endif %}
 		</main><script src="/static/js/profile.js?v=4"></script>
