Lista de usuários bloqueados

--- a/static/css/profile-d.css
+++ b/static/css/profile-d.css
@@ -3,17 +3,13 @@ body {
   color: #f8f9fa;
 }
 
-#questions {
+.activity-tab {
 	cursor: pointer;
 }
-
-#responses {
-	cursor: pointer;
-}
-
-#responses-section {
+#responses-section, #blocked-section {
 	display: none;
 }
+
 #tabs {
     border-bottom: none;
     overflow-x: auto;
