--- a/main_app/templates/notification.html
+++ b/main_app/templates/notification.html
@@ -8,7 +8,7 @@
 		<script src="/static/js/cookieman.js?v=1"></script>
 		<script>
 			var cssfn = 'notification.css';
-			var cssversion = '?v=1';
+			var cssversion = '?v=2';
 			if (getDarkCookie() == 'true') { cssfn = 'notification-d.css';}
 			var link = document.createElement('link');
 			link.rel = 'stylesheet';
@@ -24,40 +24,7 @@
     </head>
 
     <body>
-
-		<nav class="navbar navbar-expand-sm navbar-light">
-		    <a href="/" class="navbar-brand"><img src="/static/images/asker.png" height="40px" alt="Asker"></a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-
-			<div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-				<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-					{% if user.is_authenticated %}
-					<li class="nav-item">
-						<a class="nav-link" href="/user/{{user.username}}"><i class="far fa-user"></i> perfil</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="/ask"><i class="fas fa-question"></i> perguntar</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="/rank"><i class="fas fa-trophy"></i> rank</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="/logout"><i class="fas fa-external-link-alt"></i> sair</a>
-					</li>
-					{% else %}
-					<li class="nav-item">
-						<a class="nav-link" href="/signin">Entrar</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="/signup">Criar uma conta</a>
-					</li>
-					{% endif %}
-				</ul>
-			</div>
-		</nav>
-
+		{% include "includes/navbar.html" %}
         <section class="card notifications bg-main">
             <ul class="list-group list-group-flush">
             	{% for notification in notifications %}
