--- a/main_app/templates/profile.html
+++ b/main_app/templates/profile.html
@@ -11,7 +11,7 @@
 		<script src="/static/js/cookieman.js?v=1"></script>
 		<script>
 			var cssfn = 'profile.css';
-			var cssversion = '?v=5';
+			var cssversion = '?v=6';
 			if (getDarkCookie() == 'true') { cssfn = 'profile-d.css';}
 			var link = document.createElement('link');
 			link.rel = 'stylesheet';
@@ -105,43 +105,8 @@
 		</style>
 	</head>
 	<body>
-		<nav class="navbar navbar-expand-sm navbar-light">
-		    <a href="/" class="navbar-brand"><img src="/static/images/asker.png" height="40px" alt="Asker"></a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-
-			<div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-				<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-					{% if user.is_authenticated %}
-    					{% if user.username != user_p.user.username %}
-    					<li class="nav-item">
-    					    <a class="nav-link" href="/user/{{user.username}}"><i class="far fa-user"></i> perfil</a>
-    					</li>
-    					{% endif %}
-					<li class="nav-item">
-						<a class="nav-link" href="/ask"><i class="fas fa-question"></i> perguntar</a>
-					</li>
-					<li class="nav-item">
-					    <a class="nav-link" href="/notifications"><i class="far fa-bell"></i> notificações</a>
-					</li>
-					<li class="nav-item">
-					    <a class="nav-link" href="/rank"><i class="fas fa-trophy"></i> rank</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="/logout"><i class="fas fa-external-link-alt"></i> sair</a>
-					</li>
-					{% else %}
-					<li class="nav-item">
-						<a class="nav-link" href="/signin">Entrar</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="/signup">Criar uma conta</a>
-					</li>
-					{% endif %}
-				</ul>
-			</div>
-		</nav><main><div class="card bg-main" id="uinfo"><div class="card-body">
+	{% include "includes/navbar.html" %}
+	<main><div class="card bg-main" id="uinfo"><div class="card-body">
 		<center id="center1">
 		    <img src="{{user_p.avatar.url}}" alt="{{user_p.user.username}}"> <span>{{ user_p.user.username }}</span>
 			{% if user_p.user.username == "Erick" %}<p id="bio">{{ user_p.bio|safe }}</p>{% else %}
