--- a/static/css/notification-d.css
+++ b/static/css/notification-d.css
@@ -27,6 +27,10 @@ nav {
     margin: 2px;
 }
 @media (min-width: 320px) and (max-width: 480px) {
+    .navbar-brand {
+        margin-right: 0px;
+    }
+
     .notifications {
         width: 95%;
     }
