--- a/static/css/profile-d.css
+++ b/static/css/profile-d.css
@@ -56,3 +56,9 @@ body {
   z-index: 0;
   text-decoration: none;
 }
+
+@media (min-width: 320px) and (max-width: 480px) {
+    .navbar-brand {
+        margin-right: 0px;
+    }
+}
