--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -26,3 +26,9 @@
   z-index: 0;
   text-decoration: none;
 }
+
+@media (min-width: 320px) and (max-width: 480px) {
+    .navbar-brand {
+        margin-right: 0px;
+    }
+}
